# stock_analytics

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/commands/: analyze.md
docs/plans/: 2026-04-09-stock-analytics-implementation.md
docs/specs/: 2026-04-09-stock-analytics-design.md
prompts/: analyst_full.md  analyst_short.md  rules.md
scripts/: smoke_test.py
src/stock_analytics/: __init__.py  __main__.py  cli.py
src/stock_analytics/briefing/: builder.py  schema.py
src/stock_analytics/fetchers/: analyst.py  fundamentals.py  news.py  ownership.py  price.py
src/stock_analytics/indicators/: fundamentals.py  peers.py  technicals.py  valuation.py
src/stock_analytics/scoring/: red_flags.py  rubric.py
src/stock_analytics/utils/: cache.py  timeguard.py
tests/: conftest.py  test_briefing_builder.py  test_cache.py  test_indicators_fundamentals.py  test_indicators_technicals.py  test_indicators_valuation.py  test_red_flags.py  test_scoring_rubric.py  test_timeguard.py
tests/fixtures/: sample_nvda.json
