[project]
name = "stock-analytics"
version = "0.1.0"
description = "Personal US-equity analysis tool — Python computes, Claude narrates."
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
